kubernetes/mainnet/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperdata-parser
  name: casperdata-parser
spec:
  selector:
    matchLabels:
      app: casperdata-parser
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperdata-parser
        name: casperdata-parser
    spec:
      containers:
        - name: casperdata-parser
          image: killianh/casperdata
          imagePullPolicy: Always
          resources: { }
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperdata
  name: casperdata
spec:
  selector:
    matchLabels:
      app: casperdata
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperdata
        name: casperdata
    spec:
      containers:
        - name: casperdata
          image: postgrest/postgrest:v8.0.0.20211102
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources: { }
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperdata-db
  name: casperdata-db
spec:
  selector:
    matchLabels:
      app: casperdata-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperdata-db
        name: casperdata-db
    spec:
      containers:
        - name: casperdata-db
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casperbackup
  name: casperbackup
spec:
  selector:
    matchLabels:
      app: casperbackup
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: casperbackup
        name: casperbackup
    spec:
      containers:
        - name: casperbackup
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: postgres-storage
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              name: nginx-volume
      volumes:
        - name: postgres-storage
          hostPath:
            # Ensure the file directory is created.
            path: /var/volumes/postgres-backups-mainnet
            type: DirectoryOrCreate
        - name: nginx-volume
          configMap:
            name: nginx-config
      restartPolicy: Always
