kubernetes/mainnet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: casperdata-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 3000
  selector:
    app: casperdata
status:
  loadBalancer: { }
---
apiVersion: v1
kind: Service
metadata:
  name: casperdata-db-service
spec:
  ports:
    - name: casperdata-db-service
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: casperdata-db
---
apiVersion: v1
kind: Service
metadata:
  name: casperbackup-service
spec:
  ports:
    - name: casperbackup-service
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: casperbackup
